# rusty-chess

./: .codespellrc  .gitignore  Cargo.toml  README.md  build_web.sh  index.html
cli/: Cargo.toml  README.md
cli/src/: main.rs
core/: Cargo.toml  README.md
core/src/: game.rs
example-code/: struct_examples.rs
gui/: Cargo.toml  README.md
gui/src/: main.rs
src/: cli.rs  game.rs  main.rs
wasm/: Cargo.toml  README.md  index.html  index.js  index.js.bak  package-lock.json  package.json  pnpm-lock.yaml  webpack.config.js
wasm/game-of-life/: .gitignore  Cargo.toml  index.html  index.js  package-lock.json  package.json
wasm/game-of-life/src/: lib.rs
wasm/game-of-life/tests/: web.rs
wasm/src/: lib.rs  utils.rs
wasm/tests/: web.rs
