[workspace]
members = ["core", "cli", "wasm", "wasm/game-of-life"]
resolver = "2"

[workspace.package]
description = "A small chess engine with UI written in Rust"
authors = ["Christoph Ungricht <christoph.ungricht@outlook.com>"]
repository = "https://github.com/ungrichtepfl/rusty-chess"
readme = "README.md"
license-file = "LICENSE"
exclude = [".gitignore"]
