[package]
name = "rusty-chess-cli"
version = "0.1.2"
edition = "2021"
description = "Simple command line chess game written in Rust"
readme = "README.md"
authors.workspace = true
repository.workspace = true
license-file.workspace = true
exclude.workspace = true

[dependencies]
rusty-chess-core = { path = "../core", version = "0.3.0" }
regex = "1.5.5"
lazy_static = "1.4.0"
