[package]
name = "rusty-chess-core"
version = "0.3.0"
edition = "2021"
description = "Core functionalities of the chess engine."
readme = "README.md"
authors.workspace = true
repository.workspace = true
license-file.workspace = true
exclude.workspace = true

[dependencies]
rayon = {workspace = true}

