[package]
name = "rusty-chess-gui"
version = "0.1.0"
edition = "2021"
description = "A gui for the chess engine"
# include = ["src/", "assets/**/*"]
authors.workspace = true
repository.workspace = true
readme.workspace = true
license-file.workspace = true
exclude.workspace = true

[dependencies]
rusty-chess-core = { path = "../core", version = "0.1.1" }
rand = "0.8.5"
rayon = { workspace = true }
raylib = "5.0.1"

