[package]
name = "rusty-chess-gui"
version = "0.1.3"
edition = "2021"
description = "A gui for the chess engine"
readme = "README.md"
authors.workspace = true
repository.workspace = true
license-file.workspace = true
exclude.workspace = true

[dependencies]
rusty-chess-core = { path = "../core", version = "0.2.0" }
rand = "0.8.5"
rayon = { workspace = true }
raylib = "5.0.1"

