[package]
name = "rusty-chess-wasm"
version = "0.1.0"
edition = "2018"
rust-version = "1.57"
description = "A chess engine written in Rust, compiled to WebAssembly."

[lib]
# rlib needed to run "normal" rust tests too
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
rusty-chess-core = { path = "../core" }
wasm-bindgen = "0.2.89"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = {version= "0.3.66", features = ["console"]}
js-sys = "0.3.66"

[dev-dependencies]
wasm-bindgen-test = "0.3.39"

[profile.release]
# Tell `rustc` to optimize for small code size. 
opt-level = "s"
